# calseta

./: .env.lab.example  .env.local.example  .env.prod.example  .gitignore  .mcp.json.example  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DECISIONS.md  Dockerfile  MVP_LAUNCH_PLAN.md  Makefile  README.md  SECURITY.md  docker-compose.yml  openapi.json  pyproject.toml
.claude/: ROADMAP.md  settings.json
.claude/commands/: chunk.md  mcp-test.md  new-alert-source.md  new-enrichment-provider.md  new-workflow.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agents/security_analyst/: .env.example  __init__.py  __main__.py  agent.py  analyst.py  config.py  mcp_client.py  models.py  prompt.py  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_auth_field_pair_constraint.py
app/: config.py  logging_config.py  main.py  mcp_server.py  worker.py
app/api/: errors.py  health.py  pagination.py
app/auth/: CONTEXT.md  api_key_backend.py  audit.py  base.py  dependencies.py  encryption.py  scopes.py
app/cache/: __init__.py  base.py  factory.py  keys.py  memory.py
app/cli/: __init__.py  create_api_key.py  list_api_keys.py  rotate_encryption_key.py  seed_demo_data.py  seed_sandbox.py
app/db/: base.py  session.py
app/integrations/: __init__.py
app/mcp/: CONTEXT.md  auth.py  scope.py  server.py
app/middleware/: body_size.py  cors.py  logging.py  rate_limit.py  request_id.py  security_headers.py
app/queue/: CONTEXT.md  base.py  dependencies.py  factory.py  registry.py
app/repositories/: activity_event_repository.py  agent_repository.py  alert_repository.py  api_key_repository.py  base.py  context_document_repository.py  detection_rule_repository.py  enrichment_field_extraction_repository.py  enrichment_provider_repository.py  indicator_mapping_repository.py  indicator_repository.py  source_repository.py  workflow_code_version_repository.py  (+2 more)
docs/: LOCAL_DEV_GUIDE.md
examples/: README.md
scripts/: alert_listener.py  fetch_google_alerts.py  mock_agent.py
tests/: conftest.py  test_agent_trigger.py  test_agents.py  test_approval_gate.py  test_auth.py  test_builtin_workflows.py  test_context.py  test_context_documents.py  test_context_targeting.py  test_detection_rules.py  test_enrichment_providers.py  test_enrichment_service.py  test_google_workspace_source.py  test_indicator_extraction.py  test_indicator_mappings_api.py  test_ingestion.py  test_schemas.py  test_source_integrations.py  test_source_registry.py  test_workflow_ast.py  test_workflow_executor.py  test_workflows.py
ui/: DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  vite.config.ts
(+441 files in other folders)
