[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calseta"
version = "1.0.0"
description = "The data layer for your security agents"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "procrastinate>=3.0.0",
    "httpx>=0.28.0",
    "bcrypt>=4.2.0",
    "structlog>=24.4.0",
    "markitdown>=0.0.1",
    "python-multipart>=0.0.19",
    "slowapi>=0.1.9",
    "mcp>=1.0.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.9.0",
]
aws = [
    "boto3>=1.35.0",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "anyio[trio]>=4.6.0",
    "sqlalchemy[mypy]>=2.0.36",
]

[tool.setuptools.packages.find]
include = ["app*"]

# ------------------------------------------------------------
# Ruff
# ------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # do not perform function calls in default arguments (FastAPI Depends pattern)
    "SIM108", # use ternary operator — not always clearer
    "UP046",  # Generic class uses Generic subclass — Pydantic v2 requires Generic[T] pattern
]

[tool.ruff.lint.per-file-ignores]
# LLM system prompt strings contain intentionally long lines
"app/services/workflow_generator.py" = ["E501"]
# Block Kit / Adaptive Card dicts have long string values inline
"app/workflows/notifiers/slack_notifier.py" = ["E501"]
"app/workflows/notifiers/teams_notifier.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ------------------------------------------------------------
# Mypy
# ------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

# ------------------------------------------------------------
# Pytest
# ------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
